# autoduck

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
.trae/documents/: fix-tray-and-config-path.md
.trae/specs/add-gui-and-polish/: checklist.md  spec.md  tasks.md
.trae/specs/implement-autoduck-v3/: checklist.md  spec.md  tasks.md
.windows/: app.manifest
src/: audio_capture.rs  autostart.rs  config.rs  gui.rs  gui.slint  hotkey.rs  main.rs  single_instance.rs  tray_icon.rs  vad_state.rs  volume_control.rs  volume_worker.rs
