[package]
name = "autoduck"
version = "1.1.0-beta"
edition = "2021"

[dependencies]
cpal = "0.15"
rtrb = "0.3"
rubato = "0.16"
earshot = "1"
rustfft = "6"

windows = { version = "0.59", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }

tray-icon = "0.19"
muda = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
anyhow = "1"
png = "0.18"
slint = "1"

[build-dependencies]
slint-build = "1"
winres = "0.1"
